# likedscrubber

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: build-release.yml
.github/workflows/: build-release.yml
src/: main.rs
