[package]
name = "spoti_clean_liked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"
rand = "0.8.5"
