[package]
name = "likedscrubber"
version = "0.0.1"
authors = ["Charalampos Fanoulis <yo@fanoulis.dev>"]
repository = "https://github.com/cfanoulis/likedscrubber/"
license = "Apache-2.0"
rust-version = "1.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0" }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
